--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Released   : 20131010
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-			<h1><a href="#">Hyacinth</a></h1>
+			<h1><a href="#">Prafful Hisariya Website</a></h1>
 			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a></span> </div>
 		<div id="menu">
 			<ul>
